# translation-bot

./: .dockerignore  .env  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  tempCodeRunnerFile.py  test-db.sqlite  translate-db.sqlite  translation-bot.py  translation_bot.py
database/: db_functions.py
keyboards/: inline_markup.py
test/: test_translation_bot.py
