[tool.poetry]
name = "translation-bot"
version = "1"
description = "bot"
authors = ["Gleb Kharlamov <scream10@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
python-decouple = "^3.8"
pyTelegramBotAPI = "^4.14.0"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
